--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.2",
+    "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.6",
-    "woocommerce-api": "^1.5.0"
+    "nuxt": "^2.14.6"  
   },
   "devDependencies": {}
 }
