--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/style-resources": "^1.0.0",
+    "boxicons": "^2.0.5",
     "@nuxtjs/axios": "^5.12.2",
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
+    "codyhouse-framework": "^2.8.0",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.6"  
+    "nuxt": "^2.14.6",
+    "nuxt-sass-resources-loader": "^2.0.5"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "node-sass": "^4.14.1",
+    "sass-loader": "^8.0.2"
+  }
 }
